Add navbar to blogs

--- a/blogs.html
+++ b/blogs.html
@@ -6,6 +6,19 @@
     <title>Blogs | Portfolio</title>
 </head>
 <body>
-    
+    <nav class="navigation container">
+        <div class="nav-brand">iAmBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/blogs.html">Blog</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
