Add projects section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navigation container">
+    <nav class="navigation container container-center">
         <div class="nav-brand">iAmBrand</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
@@ -25,5 +25,23 @@
         <img class="hero-img" src="/images/coder.jpg" />
         <h1 class="hero-heading">Hi there! I am Arpan, a<span class="heading-inverted"> web developer</span></h1>
     </header>
+    
+    <section class="section">
+        <h1>Technologies:</h1>
+        <div class="container container-center ow">
+            <p><strong>Web development: </strong>HTML CSS JS </p>
+            <p><strong>Languages: </strong>C C++ Java Python</p>
+            <p><strong>Web Hosting: </strong>Netlify</p>
+            <p><strong>Version Control: </strong>Git, Github</p>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Projects</h1>
+            <p>Here are some of my works and you can see my projects hosted online</p>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
+        </div>
+    </section>
 </body>
 </html>
