Change some styles

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <section class="section">
         <h1>Technologies:</h1>
         <div class="container container-center ow">
-            <p><strong>Web development: </strong>HTML CSS JS </p>
+            <p><strong>Web development: </strong>HTML CSS Javascript </p>
             <p><strong>Languages: </strong>C C++ Java Python</p>
             <p><strong>Web Hosting: </strong>Netlify</p>
             <p><strong>Version Control: </strong>Git, Github</p>
         </div>
     </section>
-
+    
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
