--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navigation container">
+    <nav class="navigation container container-center">
         <div class="nav-brand">iAmBrand</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
