--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>Blogs</h1>
         <div class="container container-center ow">
             <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/">Read Blogs</a>
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
     </section>
 
