--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navigation container container-center">
-        <div class="nav-brand">iAmBrand</div>
+        <div class="nav-brand">iAmArpan</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">Home</a>
