--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navigation container container-center">
-        <div class="nav-brand">iAmBrand</div>
+        <div class="nav-brand">iAmArpan</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">Home</a>
@@ -21,5 +21,14 @@
             </li>
         </ul>
     </nav>
+    <ul class="list-non-bullet">
+        <li class="margin-md">
+            <div class="container container-center ow">
+                <h1>How to be self confident?</h1>
+                <p>Read this blog to know more about self confidence..</p>
+                <a class="link link-secondary" href="/blogs/blog1.html">Read Blog</a>
+            </div>
+        </li>
+    </ul>
 </body>
 </html>
