Add project braille translator

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,17 @@
     <ul class="list-non-bullet">
         <li class="margin-md">
             <div class="container container-center ow card">
+            <h1>English to Braille Translator</h1>
+            <small>November, 2020</small>
+            <p>A Web app built with <strong>HTML, CSS, Javascript & funtranslation api</strong>.Enter text in english to translate the text to Braille, The language used by Visually impaired people</p>
+            <a class="link link-primary link-inline" href="https://english-braille-translator.netlify.app/">Live Project</a>
+            <a class="link link-secondary link-inline" href="https://github.com/arp99/Braille-translator">View Source</a>
+
+            </div>
+            
+        </li>
+        <li class="margin-md">
+            <div class="container container-center ow card">
             <h1>English to Banana Translator</h1>
             <small>November, 2020</small>
             <p>A Web app built with <strong>HTML, CSS, Javascript & funtranslation api</strong>.Enter text in english to translate the text to the language of minions</p>
