Add project food emoji interpreter

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,15 @@
     <ul class="list-non-bullet">
         <li class="margin-md">
             <div class="container container-center ow card">
+            <h1>Food emoji interpreter</h1>
+            <small>December, 2020</small>
+            <p>A Web app built with <strong>Reactjs</strong>.Enter a food or drinks emoji to know what it actually means</p>
+            <a class="link link-primary link-inline" href="https://cn59e.codesandbox.io/">Live Project</a>
+            <a class="link link-secondary link-inline" href="https://github.com/arp99/foods-emoji-interpreter">View Source</a>
+            </div>
+        </li>
+        <li class="margin-md">
+            <div class="container container-center ow card">
             <h1>English to Braille Translator</h1>
             <small>November, 2020</small>
             <p>A Web app built with <strong>HTML, CSS, Javascript & funtranslation api</strong>.Enter text in english to translate the text to Braille, The language used by Visually impaired people</p>
