--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
             <li class="list-item-inline">
                 <i class="fab fa-linkedin"></i>
-                <a class="link" href="https://www.linkedin.com/in/arpan-mondal-99598b148/" target="_blank">
+                <a class="link" href="https://www.linkedin.com/in/arpanmondal25/" target="_blank">
                     linkedin
                 </a>
             </li>
