Changed width for large devices

--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,7 @@
     </nav>
     <ul class="list-non-bullet">
         <li class="margin-md">
-            <div class="container container-center ow">
+            <div class="container card ow">
                 <h1>How to be self confident?</h1>
                 <p>Read this blog to know more about self confidence..</p>
                 <a class="link link-secondary" href="/blogs/blog1.html">Read Blog</a>
