--- a/index.html
+++ b/index.html
@@ -27,29 +27,35 @@
         <h1 class="hero-heading">Hi there! I am Arpan, a<span class="heading-inverted"> web developer</span></h1>
     </header>
     
-    <section class="section">
+    <section class="section  container-center">
         <h1>Technologies:</h1>
-        <div class="container container-center ow">
-            <p><strong>Web development: </strong>HTML CSS Javascript </p>
-            <p><strong>Languages: </strong>C C++ Java Python</p>
-            <p><strong>Web Hosting: </strong>Netlify</p>
-            <p><strong>Version Control: </strong>Git, Github</p>
+        <div class="container div__element_center ow">
+            <div class="para__elements">
+                <p><strong>Web development: </strong>HTML CSS Javascript </p>
+                <p><strong>Languages: </strong>C C++ Java Python</p>
+                <p><strong>Web Hosting: </strong>Netlify</p>
+                <p><strong>Version Control: </strong>Git, Github</p>
+            </div>
         </div>
     </section>
     
-    <section class="section">
+    <section class="section container-center">
         <h1>Projects</h1>
-        <div class="container container-center ow">
-            <p>Here are some of my works and you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
+        <div class="container div__element_center ow">
+            <div class="para__elements">
+                <p>Here are some of my works and you can see my projects hosted online</p>
+                <a class="link link-primary" href="/projects.html">See Projects</a>
+            </div>
         </div>
     </section>
 
-    <section class="section">
+    <section class="section container-center">
         <h1>Blogs</h1>
-        <div class="container container-center ow">
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
+        <div class="container div__element_center ow">
+            <div class="para__elements">
+                <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+                <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
+            </div>
         </div>
     </section>
 
