--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navigation container container-center">
+    <nav class="navigation container">
         <div class="nav-brand">iAmArpan</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
@@ -23,16 +23,16 @@
     </nav>
     <ul class="list-non-bullet">
         <li class="margin-md">
-            <div class="container container-center ow card">
-            <h1>Food Recommender</h1>
-            <small>December, 2020</small>
-            <p>A Web app built with <strong>Reactjs</strong>. Choose your region and get my recommendation of cuisines from that region of India</p>
-            <a class="link link-primary link-inline" href="https://t65vu.codesandbox.io/">Live Project</a>
-            <a class="link link-secondary link-inline" href="https://github.com/arp99/Food-recommendar">View Source</a>
+            <div class="container ow card">
+                <h1>Food Recommender</h1>
+                <small>December, 2020</small>
+                <p>A Web app built with <strong>Reactjs</strong>. Choose your region and get my recommendation of cuisines from that region of India</p>
+                <a class="link link-primary link-inline" href="https://t65vu.codesandbox.io/">Live Project</a>
+                <a class="link link-secondary link-inline" href="https://github.com/arp99/Food-recommendar">View Source</a>
             </div>
         </li>
         <li class="margin-md">
-            <div class="container container-center ow card">
+            <div class="container ow card">
             <h1>Food emoji interpreter</h1>
             <small>December, 2020</small>
             <p>A Web app built with <strong>Reactjs</strong>.Enter a food or drinks emoji to know what it actually means</p>
@@ -41,7 +41,7 @@
             </div>
         </li>
         <li class="margin-md">
-            <div class="container container-center ow card">
+            <div class="container ow card">
             <h1>English to Braille Translator</h1>
             <small>November, 2020</small>
             <p>A Web app built with <strong>HTML, CSS, Javascript & funtranslation api</strong>.Enter text in english to translate the text to Braille, The language used by Visually impaired people</p>
@@ -50,7 +50,7 @@
             </div>
         </li>
         <li class="margin-md">
-            <div class="container container-center ow card">
+            <div class="container ow card">
             <h1>English to Banana Translator</h1>
             <small>November, 2020</small>
             <p>A Web app built with <strong>HTML, CSS, Javascript & funtranslation api</strong>.Enter text in english to translate the text to the language of minions</p>
@@ -59,7 +59,7 @@
             </div> 
         </li>
         <li class="margin-md">
-            <div class="container container-center ow card">
+            <div class="container ow card">
             <h1>How well you know the heritages of India?</h1>
             <small>November, 2020</small>
             <p>A CLI app built with <strong>nodeJS</strong>. Answer the questions to test how well you know about the heritages of India</p>
@@ -70,7 +70,7 @@
         </li>
 
         <li class="margin-md">
-            <div class="container container-center ow card">
+            <div class="container ow card">
                 <h1>How well do you know me?</h1>
                 <small>November, 2020</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. By answering the quesions one can know me better</p>
@@ -80,5 +80,23 @@
             </div>
         </li>
     </ul>
+    <footer class="footer container-center">
+        <div class="footer-header">social media presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <i class="fab fa-github"></i>
+                <a class="link" href="https://github.com/arp99" target="_blank">
+                    github
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <i class="fab fa-linkedin"></i>
+                <a class="link" href="https://www.linkedin.com/in/arpanmondal25/" target="_blank">
+                    linkedin
+                </a>
+            </li>
+            
+        </ul>
+    </footer>
 </body>
 </html>
